Fix content overflow on small screens

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -23,6 +23,7 @@ html
 	*, *:before, *:after
 		box-sizing: inherit
 	height: 100%
+	width: 100%
 
 b
 	font-weight: bold
@@ -42,6 +43,7 @@ body
 	height: 100%
 	font-family: Helvetica
 	font-weight: lighter
+	width: 100%
 	overflow-x: hidden
 
 .main-wrapper
